tests/compile_fail/duplicated_field_num.stderr
error: field_num is duplicated in #[def(...)].
 --> $DIR/duplicated_field_num.rs:5:26
  |
5 |     #[def(field_num = 1, field_num = 2, def_type = "int32")]
  |                          ^^^^^^^^^^^^^
